# MoonRover

./: README.md  frames_2025-04-12_18.26.02.gv
src/radiolink/radiolink/: node.py
src/ruka_gz/: CMakeLists.txt  README.md  package.xml
src/ruka_gz/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  move_group.yaml  moveit.rviz  moveit.yaml  moveit_controllers.yaml  ompl_planning.yaml  params.yaml  ros_gz_bridge.yaml  ruka_gz.ros2_control.xacro  ruka_gz.srdf  ruka_gz.urdf  ruka_gz.urdf.xacro  shok_controllers.yaml
src/ruka_gz/config/mesh/: RUKA-V1-gazebo.txt  base.stl  finger50mm-S.dae  finger50mm-S.stl  gripper4310.dae  gripper4310.stl  j1.stl  j1_covers.stl  j1backcover.stl  j2.stl  j2cover.stl  j2cover2s.stl  j3-cover.stl  j3-cover2s.stl  j3.stl  j4.stl  j4cover.stl  j4cover2s.stl  j5.stl  j5cover.stl  j6.stl
src/ruka_gz/hardware/: ruka_hardware.cpp
src/ruka_gz/hardware/include/: ruka_hardware.hpp  visibility_control.h
src/ruka_gz/launch/: gazebo.launch.py  joint_panel.launch.py  joint_panel_moveit.launch.py  q.launch.py
src/ruka_gz/world/: ruka_world.sdf
src/simulation/config/: gazebo.rviz
